fixed navigation scaling and removed the blue highlight clicks on mobile

--- a/src/styles/partials/Nav-scss/_Nav.scss
+++ b/src/styles/partials/Nav-scss/_Nav.scss
@@ -59,11 +59,12 @@
 
     .toolbar {
         height: 100vh;
-        width: 18%;
+        width: 35vh;
+        max-width: 300px;
         top: 0;
         right: 0;
         background: none;
-        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     }
 
     .toolbar_nav {
@@ -75,14 +76,20 @@
         visibility: visible;
         width: 100%;
         ul {
-            list-style: none;
-            margin: 0.2rem;
-            padding: 0;
             display: flex;
+            width: 100%;
+            list-style: none;
+            padding: 0;
             flex-direction: column;
-            margin: auto;
+            align-items: center;
+
+            li {
+                display: flex;
+                justify-content: center;
+            }
+
             a {
-                width: 175px;
+                width: 70%;
                 background-size: 100%;
                 font-size: 1.2rem;
                 transition: 0.3s ease-in;
